docs: add project setup, dependency, and import guidelines, and clarify Java 17 compatibility.